--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ target/
 /.classpath
 /SIAModels (NB ver.)/nbproject/private/
 /SIAModels (NetBeans ver.)/nbproject/private/
+/JUnit v4.10 (TEST)/nbproject/private/
+/JUnit v4.10 (TEST)/build/
