--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>id.ac.unpar</groupId>
     <artifactId>SIAModels</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>SIA Models</name>
     <description>
@@ -16,13 +16,23 @@
     <licenses>
         <license>
             <name>The MIT License (MIT)</name>
-            <url>https://github.com/pascalalfadian/SIAModels/blob/master/LICENSE</url>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <developers>
+        <developer>
+            <name>Pascal Alfadian Nugroho</name>
+            <email>pascal@unpar.ac.id</email>
+            <organization>Pascal Alfadian Nugroho</organization>
+            <organizationUrl>https://unpar.ac.id</organizationUrl>
+        </developer>
+    </developers>    
     <scm>
-        <url>https://github.com/pascalalfadian/SIAModels</url>
-    </scm>
+        <connection>scm:git:git://github.com/pascalalfadian/SIAModels.git</connection>
+        <developerConnection>scm:git:ssh://github.com:pascalalfadian/SIAModels.git</developerConnection>
+        <url>https://github.com/pascalalfadian/SIAModels/tree/master</url>
+    </scm>        
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
